--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string-array name="app_themes">
+        <item>Select a theme</item>
         <item>Aesthetic blue/purple</item>
-        <item>Light theme</item>
         <item>Dark theme</item>
     </string-array>
     <string name="hello_first_fragment">Hello first fragment</string>
@@ -21,12 +21,22 @@
     <string name="playlists">Playlists</string>
     <string name="explore">Explore</string>
     <string name="settings">Settings</string>
-<!--    <string-array name="playlistsMenus">-->
-<!--        <item>Create new playlist</item>-->
-<!--        <item>Downloaded</item>-->
-<!--        <item>Favourites</item>-->
-<!--    </string-array>-->
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="mymusic">MyMusic</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 </resources>
